--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -12,14 +12,10 @@
         "\n",
         "## What You'll Learn\n",
         "\n",
-        "This notebook demonstrates:\n",
-        "- **Real-world examples** from the ContractNLI dataset (legal document analysis)\n",
-        "- How to query knowledge bases with natural language\n",
-        "- Advanced features like custom instructions and query rewriting\n",
+        "- Real-world examples from ContractNLI dataset\n",
+        "- Query knowledge bases with natural language\n",
+        "- Custom instructions and query rewriting\n",
         "- File discovery and document filtering\n",
-        "- Complete workflows combining multiple tools\n",
-        "- Server log monitoring and debugging\n",
-        "- Error handling best practices\n",
         "\n",
         "## Prerequisites\n",
         "\n",
@@ -47,63 +43,29 @@
       "source": [
         "# Import server management utilities\n",
         "import sys\n",
-        "import os\n",
         "from pathlib import Path\n",
         "\n",
-        "# Add examples directory to path to import utils\n",
-        "# Try multiple methods to find the examples directory\n",
-        "examples_dir = None\n",
-        "if '__file__' in globals():\n",
-        "    examples_dir = Path(__file__).parent\n",
-        "else:\n",
-        "    # In Jupyter, try to find examples directory relative to current working directory\n",
-        "    cwd = Path.cwd()\n",
-        "    if (cwd / 'examples' / 'utils.py').exists():\n",
-        "        examples_dir = cwd / 'examples'\n",
-        "    elif (cwd.parent / 'examples' / 'utils.py').exists():\n",
-        "        examples_dir = cwd.parent / 'examples'\n",
-        "    else:\n",
-        "        # Fallback: assume we're in examples directory\n",
-        "        examples_dir = cwd\n",
-        "\n",
-        "if examples_dir:\n",
-        "    sys.path.insert(0, str(examples_dir))\n",
+        "# Add examples directory to path\n",
+        "cwd = Path.cwd()\n",
+        "if (cwd / 'examples' / 'utils.py').exists():\n",
+        "    sys.path.insert(0, str(cwd / 'examples'))\n",
+        "elif (cwd.parent / 'examples' / 'utils.py').exists():\n",
+        "    sys.path.insert(0, str(cwd.parent / 'examples'))\n",
         "\n",
         "try:\n",
-        "    from utils import (\n",
-        "        start_server,\n",
-        "        stop_server,\n",
-        "        show_logs,\n",
-        "        clear_logs,\n",
-        "        check_server_status,\n",
-        "        logs,\n",
-        "        tail_logs\n",
-        "    )\n",
+        "    from utils import start_server, stop_server, show_logs, check_server_status, logs\n",
         "    \n",
-        "    # Helper: Start server if not running\n",
         "    def ensure_server_running(port=5210):\n",
-        "        \"\"\"Ensure server is running, start if needed\"\"\"\n",
+        "        \"\"\"Start server if not running\"\"\"\n",
         "        if not check_server_status():\n",
-        "            print(\"Starting server...\")\n",
         "            start_server(port=port, kill_existing=True)\n",
         "        else:\n",
-        "            print(\"Server is already running\")\n",
+        "            print(\"Server already running\")\n",
         "    \n",
         "    print(\"✓ Server utilities loaded\")\n",
-        "    print(\"\\nAvailable functions:\")\n",
-        "    print(\"  - start_server(port=5210)      # Start server\")\n",
-        "    print(\"  - stop_server(port=5210)       # Stop server\")\n",
-        "    print(\"  - show_logs(n_lines=50)       # Show server logs\")\n",
-        "    print(\"  - logs(n=50)                  # Quick log viewer\")\n",
-        "    print(\"  - tail_logs()                  # Show last 20 lines\")\n",
-        "    print(\"  - check_server_status()       # Check if running\")\n",
-        "    print(\"  - ensure_server_running()      # Auto-start if needed\")\n",
-        "    print(\"\\nExample: start_server(port=5210) or ensure_server_running()\")\n",
-        "    \n",
-        "except ImportError as e:\n",
-        "    print(f\"⚠ Could not import utils: {e}\")\n",
-        "    print(\"You can still use the notebook, but server management functions won't be available.\")\n",
-        "    print(\"Make sure you start the server manually: python -m kbbridge.server --port 5210\")\n"
+        "    print(\"Use: start_server(port=5210) or ensure_server_running()\")\n",
+        "except ImportError:\n",
+        "    print(\"⚠ Utils not available. Start server manually: python -m kbbridge.server --port 5210\")\n"
       ]
     },
     {
@@ -112,17 +74,11 @@
       "source": [
         "## Server Management\n",
         "\n",
-        "The notebook includes server management utilities. Use them to start/stop the server and view logs:\n",
+        "Start the server before running examples:\n",
         "\n",
-        "- `start_server(port=5210)` - Start the server in the background\n",
-        "- `ensure_server_running(port=5210)` - Auto-start if not running\n",
-        "- `show_logs(n_lines=50)` - View server logs\n",
-        "- `logs(n=50)` - Quick log viewer\n",
-        "- `tail_logs()` - Show last 20 log lines\n",
-        "- `stop_server(port=5210)` - Stop the server\n",
-        "- `check_server_status()` - Check if server is running\n",
-        "\n",
-        "**Quick start**: Run `ensure_server_running()` in the cell below to automatically start the server if needed.\n"
+        "- `start_server(port=5210)` - Start server\n",
+        "- `ensure_server_running()` - Auto-start if needed\n",
+        "- `show_logs()` - View logs\n"
       ]
     },
     {
@@ -131,17 +87,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Uncomment to automatically start the server if not running\n",
-        "# ensure_server_running(port=5210)\n",
-        "\n",
-        "# Or manually start with custom settings\n",
-        "# start_server(host='0.0.0.0', port=5210)\n",
-        "\n",
-        "# Check server status\n",
-        "check_server_status()\n",
-        "\n",
-        "# View recent logs (if server is running)\n",
-        "# show_logs(n_lines=20)\n"
+        "# Start server if not running\n",
+        "ensure_server_running(port=5210)\n"
       ]
     },
     {
@@ -150,24 +97,18 @@
       "source": [
         "## Real-World Examples: ContractNLI Dataset\n",
         "\n",
-        "Let's start with **real-world examples** from the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/), which demonstrates how KB-Bridge can be used for legal document analysis.\n",
+        "Examples from the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/) demonstrating legal document analysis.\n",
         "\n",
-        "These examples show how to:\n",
-        "- Query complex legal documents\n",
-        "- Extract specific information from contracts\n",
-        "- Use custom instructions for domain-specific queries\n",
-        "- Monitor server logs during execution\n",
-        "\n",
-        "**Note**: Make sure your `RESOURCE_ID` points to a knowledge base containing contract documents.\n"
+        "**Note**: Set `RESOURCE_ID` to your knowledge base containing contract documents.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Example 1: Non-Compete Clause Analysis\n",
+        "### Example 1: Non-Compete Clause\n",
         "\n",
-        "This example queries a contract to find information about non-compete restrictions. Notice how we use **custom instructions** to guide the extraction of specific legal terms.\n"
+        "Query with custom instructions to extract specific legal terms.\n"
       ]
     },
     {
@@ -177,39 +118,13 @@
       "outputs": [],
       "source": [
         "async def example_non_compete_clause():\n",
-        "    \"\"\"\n",
-        "    Example: Query about non-compete clause restrictions\n",
-        "    \n",
-        "    This demonstrates:\n",
-        "    - Basic assistant query with custom instructions\n",
-        "    - Extracting specific legal terms (time periods, geographic restrictions)\n",
-        "    - Monitoring server logs for debugging\n",
-        "    \"\"\"\n",
-        "    # Check server status and logs before starting\n",
-        "    print(\"=\" * 80)\n",
-        "    print(\"Example 1: Non-Compete Clause Analysis\")\n",
-        "    print(\"=\" * 80)\n",
-        "    \n",
-        "    # Show recent logs to see what's happening\n",
-        "    print(\"\\n📋 Recent server logs:\")\n",
-        "    tail_logs()\n",
-        "    \n",
+        "    \"\"\"Query about non-compete clause restrictions\"\"\"\n",
         "    query = \"Does the agreement include a non-compete clause restricting the employee from joining competitors?\"\n",
         "    \n",
-        "    # Custom instructions help extract specific legal information\n",
         "    custom_instructions = \"\"\"\n",
-        "    Focus on extracting:\n",
-        "    1. Time period restrictions (e.g., \"12 months\", \"after termination\")\n",
-        "    2. Geographic scope (e.g., \"50-mile radius\", \"within state\")\n",
-        "    3. Scope of restriction (what activities are prohibited)\n",
-        "    4. Any exceptions or conditions\n",
-        "    \n",
-        "    Cite the exact text from the document.\n",
+        "    Extract: time periods (e.g., \"12 months\"), geographic scope (e.g., \"50-mile radius\"), \n",
+        "    scope of restriction, and any exceptions. Cite exact text from the document.\n",
         "    \"\"\"\n",
-        "    \n",
-        "    print(f\"\\n🔍 Query: {query}\")\n",
-        "    print(f\"\\n📝 Custom Instructions: {custom_instructions.strip()}\")\n",
-        "    print(\"\\n⏳ Executing query...\\n\")\n",
         "    \n",
         "    async with ClientSession(SERVER_URL) as session:\n",
         "        result = await session.call_tool(\"assistant\", {\n",
@@ -218,35 +133,17 @@
         "            \"custom_instructions\": custom_instructions\n",
         "        })\n",
         "        \n",
-        "        # Parse response\n",
         "        response_data = json.loads(result.content[0].text)\n",
         "        \n",
-        "        print(\"=\" * 80)\n",
-        "        print(\"RESULT\")\n",
-        "        print(\"=\" * 80)\n",
-        "        \n",
         "        if \"answer\" in response_data:\n",
-        "            print(f\"\\n✅ Answer:\\n{response_data['answer']}\\n\")\n",
+        "            print(\"Answer:\", response_data[\"answer\"])\n",
+        "            if \"sources\" in response_data:\n",
+        "                print(f\"\\nSources ({len(response_data['sources'])}):\")\n",
+        "                for source in response_data[\"sources\"][:3]:\n",
+        "                    print(f\"  - {source.get('title', 'Unknown')} (score: {source.get('score', 0):.3f})\")\n",
         "        else:\n",
-        "            print(f\"❌ Error: {response_data.get('error', 'Unknown error')}\")\n",
-        "        \n",
-        "        # Show sources\n",
-        "        if \"sources\" in response_data and response_data[\"sources\"]:\n",
-        "            print(f\"\\n📚 Sources ({len(response_data['sources'])} found):\")\n",
-        "            for i, source in enumerate(response_data[\"sources\"][:3], 1):\n",
-        "                print(f\"\\n  {i}. {source.get('title', 'Unknown')}\")\n",
-        "                print(f\"     Score: {source.get('score', 0):.3f}\")\n",
-        "                if 'content' in source:\n",
-        "                    preview = source['content'][:150] + \"...\" if len(source['content']) > 150 else source['content']\n",
-        "                    print(f\"     Preview: {preview}\")\n",
-        "        \n",
-        "        # Show updated logs after query\n",
-        "        print(\"\\n\" + \"=\" * 80)\n",
-        "        print(\"📋 Updated Server Logs (last 10 lines):\")\n",
-        "        print(\"=\" * 80)\n",
-        "        logs(n=10)\n",
+        "            print(\"Error:\", response_data.get(\"error\", \"Unknown error\"))\n",
         "\n",
-        "# Run the example\n",
         "await example_non_compete_clause()\n"
       ]
     },
@@ -254,9 +151,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Example 2: Termination Notice Requirements\n",
+        "### Example 2: Termination Notice\n",
         "\n",
-        "This example demonstrates querying for specific contractual terms with multiple conditions. We'll also use **query rewriting** to improve search results.\n"
+        "Using query rewriting to improve search results.\n"
       ]
     },
     {
@@ -266,94 +163,29 @@
       "outputs": [],
       "source": [
         "async def example_termination_notice():\n",
-        "    \"\"\"\n",
-        "    Example: Query about termination notice requirements\n",
-        "    \n",
-        "    This demonstrates:\n",
-        "    - Using query rewriting for better search results\n",
-        "    - Extracting time-sensitive information (notice periods)\n",
-        "    - Combining multiple tools (file discovery + assistant)\n",
-        "    \"\"\"\n",
-        "    print(\"=\" * 80)\n",
-        "    print(\"Example 2: Termination Notice Requirements\")\n",
-        "    print(\"=\" * 80)\n",
-        "    \n",
+        "    \"\"\"Query about termination notice requirements with query rewriting\"\"\"\n",
         "    query = \"What is the notice period required for contract termination by either party?\"\n",
         "    \n",
-        "    # Use query rewriting to expand/relax the query for better retrieval\n",
-        "    print(f\"\\n🔍 Query: {query}\")\n",
-        "    print(\"✨ Using query rewriting (enable_query_rewriting=True)\")\n",
-        "    print(\"   This helps find relevant documents even if exact wording differs.\\n\")\n",
-        "    \n",
         "    async with ClientSession(SERVER_URL) as session:\n",
-        "        # Step 1: First discover relevant files\n",
-        "        print(\"📂 Step 1: Discovering relevant files...\")\n",
-        "        file_result = await session.call_tool(\"file_discover\", {\n",
-        "            \"query\": query,\n",
-        "            \"resource_id\": RESOURCE_ID,\n",
-        "            \"top_k_return\": 5,\n",
-        "            \"do_file_rerank\": True\n",
-        "        })\n",
-        "        \n",
-        "        file_data = json.loads(file_result.content[0].text)\n",
-        "        if file_data.get(\"success\") and file_data.get(\"distinct_files\"):\n",
-        "            files = file_data[\"distinct_files\"]\n",
-        "            print(f\"   Found {len(files)} relevant files:\")\n",
-        "            for f in files[:3]:\n",
-        "                print(f\"     - {f}\")\n",
-        "        \n",
-        "        # Step 2: Query with rewriting enabled\n",
-        "        print(f\"\\n⏳ Step 2: Querying with rewriting enabled...\\n\")\n",
-        "        \n",
+        "        # Query with rewriting enabled for better search results\n",
         "        result = await session.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": query,\n",
-        "            \"enable_query_rewriting\": True,  # Enable LLM-based query expansion\n",
-        "            \"custom_instructions\": \"\"\"\n",
-        "            Extract the exact notice period requirements including:\n",
-        "            1. Duration (e.g., \"30 days\", \"60 days\")\n",
-        "            2. Method of notice (written, email, certified mail)\n",
-        "            3. When notice becomes effective\n",
-        "            4. Any special conditions or exceptions\n",
-        "            \n",
-        "            Be precise with time periods and cite the exact contract language.\n",
-        "            \"\"\"\n",
+        "            \"enable_query_rewriting\": True,\n",
+        "            \"custom_instructions\": \"Extract exact notice period (duration, method, effective date). Cite contract language.\"\n",
         "        })\n",
         "        \n",
-        "        # Parse response\n",
         "        response_data = json.loads(result.content[0].text)\n",
         "        \n",
-        "        print(\"=\" * 80)\n",
-        "        print(\"RESULT\")\n",
-        "        print(\"=\" * 80)\n",
-        "        \n",
         "        if \"answer\" in response_data:\n",
-        "            print(f\"\\n✅ Answer:\\n{response_data['answer']}\\n\")\n",
-        "            \n",
-        "            # Highlight key information\n",
-        "            answer_text = response_data['answer'].lower()\n",
-        "            if \"day\" in answer_text or \"month\" in answer_text:\n",
-        "                print(\"⏰ Time-sensitive information found in answer\")\n",
-        "            if \"notice\" in answer_text or \"written\" in answer_text:\n",
-        "                print(\"📄 Notice requirements identified\")\n",
+        "            print(\"Answer:\", response_data[\"answer\"])\n",
+        "            if \"sources\" in response_data:\n",
+        "                print(f\"\\nTop Sources:\")\n",
+        "                for source in response_data[\"sources\"][:3]:\n",
+        "                    print(f\"  - {source.get('title', 'Unknown')} (score: {source.get('score', 0):.3f})\")\n",
         "        else:\n",
-        "            print(f\"❌ Error: {response_data.get('error', 'Unknown error')}\")\n",
-        "        \n",
-        "        # Show sources with relevance scores\n",
-        "        if \"sources\" in response_data and response_data[\"sources\"]:\n",
-        "            print(f\"\\n📚 Top Sources:\")\n",
-        "            for i, source in enumerate(response_data[\"sources\"][:3], 1):\n",
-        "                score = source.get('score', 0)\n",
-        "                print(f\"\\n  {i}. {source.get('title', 'Unknown')}\")\n",
-        "                print(f\"     Relevance Score: {score:.3f} {'⭐' if score > 0.7 else '📄'}\")\n",
-        "        \n",
-        "        # Show logs to see query rewriting in action\n",
-        "        print(\"\\n\" + \"=\" * 80)\n",
-        "        print(\"📋 Server Logs (showing query rewriting activity):\")\n",
-        "        print(\"=\" * 80)\n",
-        "        logs(n=15)\n",
+        "            print(\"Error:\", response_data.get(\"error\", \"Unknown error\"))\n",
         "\n",
-        "# Run the example\n",
         "await example_termination_notice()\n"
       ]
     },
