Fix import errors in notebook
- Move imports (asyncio, json, ClientSession) and config (SERVER_URL, RESOURCE_ID) to cell 4 before examples
- Remove duplicate imports from later cell
- Fix import order so examples can use ClientSession, SERVER_URL, RESOURCE_ID, and json

--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -92,6 +92,22 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import required libraries\n",
+        "import asyncio\n",
+        "import json\n",
+        "from mcp import ClientSession\n",
+        "\n",
+        "# Server configuration\n",
+        "SERVER_URL = \"http://localhost:5210/mcp\"\n",
+        "RESOURCE_ID = \"your-resource-id\"  # Replace with your actual resource ID\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -99,7 +115,7 @@
         "\n",
         "Examples from the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/) demonstrating legal document analysis.\n",
         "\n",
-        "**Note**: Set `RESOURCE_ID` to your knowledge base containing contract documents.\n"
+        "**Note**: Update `RESOURCE_ID` in the cell above with your actual knowledge base ID.\n"
       ]
     },
     {
@@ -195,15 +211,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import asyncio\n",
-        "import json\n",
-        "from mcp import ClientSession\n",
-        "\n",
-        "# Server URL - adjust if your server is running on a different host/port\n",
-        "SERVER_URL = \"http://localhost:5210/mcp\"\n",
-        "\n",
-        "# Example resource ID - replace with your actual resource ID\n",
-        "RESOURCE_ID = \"your-resource-id\"\n"
+        "# Imports and configuration are already set up in cell 4 above\n",
+        "# SERVER_URL and RESOURCE_ID are defined there\n"
       ]
     },
     {
