--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -97,95 +97,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Import required libraries\n",
-        "import asyncio\n",
+        "# Import MCP client and required libraries\n",
+        "import sys\n",
+        "from pathlib import Path\n",
         "import json\n",
-        "import httpx\n",
-        "from typing import Dict, Any\n",
         "\n",
-        "# MCP Client Helper (alternative to mcp package)\n",
-        "class MCPClient:\n",
-        "    \"\"\"Simple HTTP client for MCP servers.\"\"\"\n",
-        "    \n",
-        "    def __init__(self, base_url: str):\n",
-        "        self.base_url = base_url.rstrip('/')\n",
-        "        self.client = httpx.AsyncClient(timeout=300.0)\n",
-        "    \n",
-        "    async def call_tool(self, tool_name: str, arguments: Dict[str, Any]) -> Dict[str, Any]:\n",
-        "        \"\"\"Call an MCP tool.\"\"\"\n",
-        "        payload = {\n",
-        "            \"jsonrpc\": \"2.0\",\n",
-        "            \"id\": 1,\n",
-        "            \"method\": \"tools/call\",\n",
-        "            \"params\": {\n",
-        "                \"name\": tool_name,\n",
-        "                \"arguments\": arguments\n",
-        "            }\n",
-        "        }\n",
-        "        \n",
-        "        response = await self.client.post(\n",
-        "            self.base_url,\n",
-        "            json=payload,\n",
-        "            headers={\"Content-Type\": \"application/json\"}\n",
-        "        )\n",
-        "        response.raise_for_status()\n",
-        "        result = response.json()\n",
-        "        \n",
-        "        if \"result\" in result:\n",
-        "            if \"content\" in result[\"result\"]:\n",
-        "                content_text = result[\"result\"][\"content\"][0].get(\"text\", \"\")\n",
-        "                try:\n",
-        "                    return json.loads(content_text)\n",
-        "                except json.JSONDecodeError:\n",
-        "                    return {\"text\": content_text}\n",
-        "            return result[\"result\"]\n",
-        "        elif \"error\" in result:\n",
-        "            raise Exception(f\"MCP Error: {result['error']}\")\n",
-        "        return result\n",
-        "    \n",
-        "    async def close(self):\n",
-        "        await self.client.aclose()\n",
-        "    \n",
-        "    async def __aenter__(self):\n",
-        "        return self\n",
-        "    \n",
-        "    async def __aexit__(self, exc_type, exc_val, exc_tb):\n",
-        "        await self.close()\n",
+        "# Add examples directory to path to import mcp_client\n",
+        "cwd = Path.cwd()\n",
+        "if (cwd / 'examples' / 'mcp_client.py').exists():\n",
+        "    sys.path.insert(0, str(cwd / 'examples'))\n",
+        "elif (cwd.parent / 'examples' / 'mcp_client.py').exists():\n",
+        "    sys.path.insert(0, str(cwd.parent / 'examples'))\n",
         "\n",
-        "\n",
-        "# ClientSession-compatible interface\n",
-        "class ClientSession:\n",
-        "    \"\"\"ClientSession-compatible interface for HTTP MCP servers.\"\"\"\n",
-        "    \n",
-        "    def __init__(self, url: str):\n",
-        "        self.client = MCPClient(url)\n",
-        "        self._closed = False\n",
-        "    \n",
-        "    async def call_tool(self, tool_name: str, arguments: Dict[str, Any]):\n",
-        "        \"\"\"Call an MCP tool.\"\"\"\n",
-        "        result = await self.client.call_tool(tool_name, arguments)\n",
-        "        \n",
-        "        class Result:\n",
-        "            def __init__(self, data):\n",
-        "                self.data = data\n",
-        "                content_obj = type('Content', (), {'text': json.dumps(data)})()\n",
-        "                self.content = [content_obj]\n",
-        "        \n",
-        "        return Result(result)\n",
-        "    \n",
-        "    async def __aenter__(self):\n",
-        "        return self\n",
-        "    \n",
-        "    async def __aexit__(self, exc_type, exc_val, exc_tb):\n",
-        "        if not self._closed:\n",
-        "            await self.client.close()\n",
-        "            self._closed = True\n",
+        "try:\n",
+        "    from mcp_client import ClientSession\n",
+        "    print(\"✓ MCP Client loaded\")\n",
+        "except ImportError:\n",
+        "    print(\"⚠ mcp_client.py not found. Install httpx: pip install httpx\")\n",
+        "    raise\n",
         "\n",
         "# Server configuration\n",
         "SERVER_URL = \"http://localhost:5210/mcp\"\n",
         "RESOURCE_ID = \"your-resource-id\"  # Replace with your actual resource ID\n",
         "\n",
-        "print(\"✓ MCP Client loaded (using HTTP-based client)\")\n",
         "print(f\"✓ Server URL: {SERVER_URL}\")\n",
         "print(f\"✓ Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
       ]
