--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -22,7 +22,7 @@
         "Before running this notebook:\n",
         "\n",
         "1. **Install KB-Bridge**: `pip install kbbridge`\n",
-        "2. **Install HTTP client**: `pip install httpx` (or use `pip install mcp` for official MCP client)\n",
+        "2. **Install FastMCP**: `pip install fastmcp` (required for MCP client)\n",
         "3. **Configure credentials**: Create a `.env` file with your backend credentials (see [README](https://github.com/egpivo/kb-bridge) for details)\n",
         "4. **Start the server**: \n",
         "   - **Option A (Recommended)**: Use the server utilities in the next cell - just run `start_server()` or `ensure_server_running()`\n",
