Simplify MCP client to use FastMCP Client directly
- Remove unnecessary ClientSession wrapper class
- Use FastMCP Client directly in notebook examples
- Keep ClientSession alias for backward compatibility
- Update all notebook examples to use 'client' instead of 'session'
- Much simpler implementation - just import and re-export Client

--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -62,10 +62,10 @@
         "        else:\n",
         "            print(\"Server already running\")\n",
         "    \n",
-        "    print(\"✓ Server utilities loaded\")\n",
+        "    print(\"\u2713 Server utilities loaded\")\n",
         "    print(\"Use: start_server(port=5566) or ensure_server_running()\")\n",
         "except ImportError:\n",
-        "    print(\"⚠ Utils not available. Start server manually: python -m kbbridge.server --port 5566\")\n"
+        "    print(\"\u26a0 Utils not available. Start server manually: python -m kbbridge.server --port 5566\")\n"
       ]
     },
     {
@@ -110,18 +110,18 @@
         "    sys.path.insert(0, str(cwd.parent / 'examples'))\n",
         "\n",
         "try:\n",
-        "    from mcp_client import ClientSession\n",
-        "    print(\"✓ MCP Client loaded\")\n",
+        "    from mcp_client import Client\n",
+        "    print(\"\u2713 MCP Client loaded\")\n",
         "except ImportError:\n",
-        "    print(\"⚠ mcp_client.py not found. Install httpx: pip install httpx\")\n",
+        "    print(\"\u26a0 mcp_client.py not found. Install fastmcp: pip install fastmcp\")\n",
         "    raise\n",
         "\n",
         "# Server configuration\n",
         "SERVER_URL = \"http://localhost:5566/mcp\"\n",
         "RESOURCE_ID = \"your-resource-id\"  # Replace with your actual resource ID\n",
         "\n",
-        "print(f\"✓ Server URL: {SERVER_URL}\")\n",
-        "print(f\"✓ Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
+        "print(f\"\u2713 Server URL: {SERVER_URL}\")\n",
+        "print(f\"\u2713 Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
       ]
     },
     {
@@ -159,8 +159,8 @@
         "    scope of restriction, and any exceptions. Cite exact text from the document.\n",
         "    \"\"\"\n",
         "    \n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": query,\n",
         "            \"custom_instructions\": custom_instructions\n",
@@ -199,9 +199,9 @@
         "    \"\"\"Query about termination notice requirements with query rewriting\"\"\"\n",
         "    query = \"What is the notice period required for contract termination by either party?\"\n",
         "    \n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
+        "    async with Client(SERVER_URL) as client:\n",
         "        # Query with rewriting enabled for better search results\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": query,\n",
         "            \"enable_query_rewriting\": True,\n",
@@ -249,8 +249,8 @@
       "source": [
         "async def basic_query_example():\n",
         "    \"\"\"Basic query example\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": \"What are the safety protocols?\"\n",
         "        })\n",
@@ -287,8 +287,8 @@
       "source": [
         "async def custom_instructions_example():\n",
         "    \"\"\"Example with custom instructions\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": \"What is the maternity leave policy?\",\n",
         "            \"custom_instructions\": \"Focus on HR compliance and legal requirements. Cite specific articles or sections.\"\n",
@@ -317,8 +317,8 @@
       "source": [
         "async def query_rewriting_example():\n",
         "    \"\"\"Example with query rewriting enabled\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": \"safety rules\",\n",
         "            \"enable_query_rewriting\": True  # Enables LLM-based query expansion/relaxation\n",
@@ -347,8 +347,8 @@
       "source": [
         "async def document_filtering_example():\n",
         "    \"\"\"Example with document filtering\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"assistant\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": \"What are the safety protocols?\",\n",
         "            \"document_name\": \"safety_manual.pdf\"  # Limit search to specific document\n",
@@ -379,9 +379,9 @@
       "source": [
         "async def file_discovery_example():\n",
         "    \"\"\"Discover relevant files for a query\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
+        "    async with Client(SERVER_URL) as client:\n",
         "        # Step 1: Discover relevant files\n",
-        "        result = await session.call_tool(\"file_discover\", {\n",
+        "        result = await client.call_tool(\"file_discover\", {\n",
         "            \"query\": \"employment policies\",\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"top_k_recall\": 100,  # Number of documents to retrieve\n",
@@ -401,7 +401,7 @@
         "            # Step 2: Query a specific file\n",
         "            if files:\n",
         "                print(f\"\\nQuerying specific file: {files[0]}\")\n",
-        "                answer_result = await session.call_tool(\"assistant\", {\n",
+        "                answer_result = await client.call_tool(\"assistant\", {\n",
         "                    \"resource_id\": RESOURCE_ID,\n",
         "                    \"query\": \"What are the vacation policies?\",\n",
         "                    \"document_name\": files[0]  # Use file from discovery\n",
@@ -432,8 +432,8 @@
       "source": [
         "async def file_lister_example():\n",
         "    \"\"\"List files in a knowledge base\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"file_lister\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"file_lister\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"timeout\": 30,\n",
         "            \"limit\": 50,  # Limit number of files returned\n",
@@ -473,8 +473,8 @@
       "source": [
         "async def file_count_example():\n",
         "    \"\"\"Get file count in knowledge base\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"file_count\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"file_count\", {\n",
         "            \"resource_id\": RESOURCE_ID\n",
         "        })\n",
         "        \n",
@@ -502,8 +502,8 @@
       "source": [
         "async def keyword_generator_example():\n",
         "    \"\"\"Generate keywords for a query\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
-        "        result = await session.call_tool(\"keyword_generator\", {\n",
+        "    async with Client(SERVER_URL) as client:\n",
+        "        result = await client.call_tool(\"keyword_generator\", {\n",
         "            \"query\": \"employee benefits and compensation\",\n",
         "            \"max_sets\": 5  # Number of keyword sets to generate\n",
         "        })\n",
@@ -539,9 +539,9 @@
       "source": [
         "async def retriever_example():\n",
         "    \"\"\"Use retriever tool with different search methods\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
+        "    async with Client(SERVER_URL) as client:\n",
         "        # Example: Hybrid search (semantic + keyword)\n",
-        "        result = await session.call_tool(\"retriever\", {\n",
+        "        result = await client.call_tool(\"retriever\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": \"safety protocols\",\n",
         "            \"search_method\": \"hybrid\",  # Options: \"hybrid\", \"semantic\", \"keyword\", \"full_text\"\n",
@@ -586,7 +586,7 @@
       "source": [
         "async def complete_workflow_example():\n",
         "    \"\"\"Complete workflow: discover files -> generate keywords -> query assistant\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
+        "    async with Client(SERVER_URL) as client:\n",
         "        query = \"employee vacation and leave policies\"\n",
         "        \n",
         "        print(\"=\" * 60)\n",
@@ -595,7 +595,7 @@
         "        \n",
         "        # Step 1: Generate keywords\n",
         "        print(\"\\n1. Generating keywords...\")\n",
-        "        keyword_result = await session.call_tool(\"keyword_generator\", {\n",
+        "        keyword_result = await client.call_tool(\"keyword_generator\", {\n",
         "            \"query\": query,\n",
         "            \"max_sets\": 3\n",
         "        })\n",
@@ -605,7 +605,7 @@
         "        \n",
         "        # Step 2: Discover relevant files\n",
         "        print(\"\\n2. Discovering relevant files...\")\n",
-        "        file_result = await session.call_tool(\"file_discover\", {\n",
+        "        file_result = await client.call_tool(\"file_discover\", {\n",
         "            \"query\": query,\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"top_k_return\": 10\n",
@@ -616,7 +616,7 @@
         "        \n",
         "        # Step 3: Query assistant with custom instructions\n",
         "        print(\"\\n3. Querying assistant...\")\n",
-        "        answer_result = await session.call_tool(\"assistant\", {\n",
+        "        answer_result = await client.call_tool(\"assistant\", {\n",
         "            \"resource_id\": RESOURCE_ID,\n",
         "            \"query\": query,\n",
         "            \"custom_instructions\": \"Provide a comprehensive answer with specific details. Cite sources.\",\n",
@@ -654,9 +654,9 @@
       "source": [
         "async def error_handling_example():\n",
         "    \"\"\"Example of error handling\"\"\"\n",
-        "    async with ClientSession(SERVER_URL) as session:\n",
+        "    async with Client(SERVER_URL) as client:\n",
         "        try:\n",
-        "            result = await session.call_tool(\"assistant\", {\n",
+        "            result = await client.call_tool(\"assistant\", {\n",
         "                \"resource_id\": \"invalid-resource-id\",\n",
         "                \"query\": \"test query\"\n",
         "            })\n",
