Remove unnecessary mcp_client.py wrapper
- Delete mcp_client.py - no longer needed
- Import Client directly from fastmcp in notebook
- Simplify notebook imports by removing path manipulation code
- Cleaner and more direct approach

--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -87,8 +87,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Start server if not running\n",
-        "ensure_server_running(port=5566)\n"
+        "# Import MCP client and required libraries\n",
+        "import json\n",
+        "\n",
+        "try:\n",
+        "    from fastmcp import Client\n",
+        "    print(\"\u2713 MCP Client loaded\")\n",
+        "except ImportError:\n",
+        "    print(\"\u26a0 FastMCP not found. Install it with: pip install fastmcp\")\n",
+        "    raise\n",
+        "\n",
+        "# Server configuration\n",
+        "SERVER_URL = \"http://localhost:5566/mcp\"\n",
+        "RESOURCE_ID = \"your-resource-id\"  # Replace with your actual resource ID\n",
+        "\n",
+        "print(f\"\u2713 Server URL: {SERVER_URL}\")\n",
+        "print(f\"\u2713 Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
       ]
     },
     {
@@ -102,15 +116,9 @@
         "from pathlib import Path\n",
         "import json\n",
         "\n",
-        "# Add examples directory to path to import mcp_client\n",
-        "cwd = Path.cwd()\n",
-        "if (cwd / 'examples' / 'mcp_client.py').exists():\n",
-        "    sys.path.insert(0, str(cwd / 'examples'))\n",
-        "elif (cwd.parent / 'examples' / 'mcp_client.py').exists():\n",
-        "    sys.path.insert(0, str(cwd.parent / 'examples'))\n",
         "\n",
         "try:\n",
-        "    from mcp_client import Client\n",
+        "    from fastmcp import Client\n",
         "    print(\"\u2713 MCP Client loaded\")\n",
         "except ImportError:\n",
         "    print(\"\u26a0 mcp_client.py not found. Install fastmcp: pip install fastmcp\")\n",
